syntax = "proto3";

package product;

option go_package = "/productpb";

message GetProductByIDRequest {
    int32 id = 1;
}

message UpdateProductRequest{
    int32 product_id = 1;
    int32 quantity = 2;
}

message ProductResponse {
    int32 id = 1;
    string name = 2;
    int32 availability = 3;
    int32 price = 4;
    string category = 5;
}

service ProductService {
    //Unary
    rpc GetProduct(GetProductByIDRequest) returns (ProductResponse);
    rpc UpdateProduct (UpdateProductRequest) returns (ProductResponse);
}
